css/style.css
/* 
font-family: 'Playfair Display', 'Georgia', serif;
font-family: 'Raleway', 'Verdana', sans-serif;
font-family: 'Raleway Dots', 'Brush Script MT', cursive; 
*/

/* Helper classes 
Color shades 1-6, 1 lightest to 6 darkest
*/

.color1 {
    color: #F5F5F5;
}

.color2 {
    color: #EAEAEA;
}

.color3 {
    color: #C4C5C2;
}

.color4 {
    color: #9FA29C;
}

.color5 {
    color: #848981;
}

.color6 {
    color: #1B1B1B;
}

/* CSS start here */
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: 'Raleway', 'Verdana', sans-serif;
    font-size: 1rem;
}

body {
    margin: 2rem 1rem;
    height: 2000px; 
    /*TEMPORARY!!*/
}

header {
    background-color: rgb(225, 196, 196);
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    padding: 2rem 1rem 0.5rem 1rem;
}

.headings {
    display: flex;
    justify-content: space-between;
    align-items: center;
    outline: 2px dotted red;
}

h1 {
    font-family: 'Playfair Display', 'Georgia', serif;
    font-style: italic;
    font-weight: 900;
    font-size: 2rem;
}

.icon-menu {
    font-size: 1.5rem;
    cursor: pointer;
}

nav {
    position: absolute;
    width: 100%;
    height: 100vh;
    background-color: rgb(255, 255, 255);
    top: -600%; 
    transition: all 0.6s ease-in-out;
}

.showMenu {
    top: 60%; /*60% relative to the parent: .headings, thus let h1 come out*/
}

nav ul {
    display: flex;
    flex-flow: column;
    height: 100%;
    /* outline: 2px solid black; */
}

nav ul li {
    font-family: 'Raleway', 'Verdana', sans-serif;
    font-size: 2rem;
    font-weight: 500;
    list-style: none;
    padding: 16px 0px;
}

nav ul li .seriesMenu {
    font-size: 1.75rem;
    /* outline: 2px solid blue; */
    padding: 0.25rem 0 0.25rem 2rem;
}

h2 {
    font-family: 'Playfair Display', 'Georgia', serif;
    font-weight: 500;
    font-size: 1rem;
    /* outline: 2px dotted red; */
    margin: 24px 0 0 0;
}

h3 {
    font-family: 'Raleway Dots', 'Brush Script MT', cursive; 
    font-weight: 400;
    font-size: 3rem;
    outline: 2px dotted red;
    margin: 12rem 0 0 0;
    display: flex;
    justify-content: center;
}

section {
    margin: 24px 0px;
    outline: 2px dotted brown;
}

/* section div {
    
} */

.imgBox {
    background-color: beige;
    width: 25rem; 
    height: 25rem; 
}

